--- a/face_jade_client/package.json
+++ b/face_jade_client/package.json
@@ -73,6 +73,7 @@
     "core-js": "^3.8.3",
     "flyio": "^0.6.2",
     "prettier": "2.5.1",
+    "uview-ui": "^2.0.38",
     "vue": ">= 2.6.14 < 2.7",
     "vue-router": "^3.6.5",
     "vuex": "^3.2.0"
@@ -97,6 +98,8 @@
     "eslint": "8.22.0",
     "jest": "^25.4.0",
     "postcss-comment": "^2.0.0",
+    "sass": "^1.81.0",
+    "sass-loader": "10",
     "vue-template-compiler": ">= 2.6.14 < 2.7"
   },
   "browserslist": [
